--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.serialization.indent_output=true
+#spring.jackson.visibility.all=none
+#spring.jackson.visibility.field=any
+#spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jackson.serialization.write-dates-as-timestamps=false
+#spring.jackson.default-property-inclusion=non_null
