--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.indent_output=true
+spring.jackson.visibility.is-getter=none
 #spring.jackson.visibility.all=none
 #spring.jackson.visibility.field=any
 #spring.jackson.serialization.fail-on-empty-beans=false
