--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.indent_output=true
 spring.jackson.visibility.is-getter=none
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 #spring.jackson.visibility.all=none
 #spring.jackson.visibility.field=any
 #spring.jackson.serialization.fail-on-empty-beans=false
