--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.indent_output=true
-spring.jackson.visibility.is-getter=none
+#cconfigure via bean class for tests
+#spring.jackson.visibility.is-getter=none
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 #spring.jackson.visibility.all=none
