--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>rrvs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>rrvs</name>
-    <description></description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -53,6 +52,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
