move db settings in property file outside jar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
-spring.jpa.hibernate.ddl-auto=none
+# database settings
+spring.datasource.type=org.springframework.jdbc.datasource.DriverManagerDataSource
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.url=jdbc:hsqldb:mem:rrvs
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.initialization-mode=embedded
+spring.datasource.data=classpath:db/schema.sql,classpath:db/population.sql
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# application settings
+end.voting.time=11:00
+
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 #logging.level.org.springframework.security=DEBUG
-
-end.voting.time=11:00
