--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <resources.dir>src/main/resources</resources.dir>
     </properties>
 
     <dependencies>
@@ -61,6 +62,21 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${resources.dir}</directory>
+                <targetPath>${project.build.directory}</targetPath>
+                <includes>
+                    <include>application.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>${resources.dir}</directory>
+                <excludes>
+                    <exclude>application.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
