--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -8,8 +8,8 @@ spring.datasource.initialization-mode=embedded
 spring.datasource.data=classpath:db/schema.sql,classpath:db/population.sql
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # application settings
 end.voting.time=11:00
